# payroll-analizer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  INSTALL-INFO.md  ISSUES_ASSESSMENT.md  PIANO_TECNICO.md  README.md  RELEASE_LOG.md  SECURITY.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
alembic/: env.py
docs/: CLI_REDESIGN_PROPOSAL.md  PIANO_TECNICO_NEW_TEMPLATES.md  RELEASE_PROCESS.md
scripts/: check_coverage.py  release.sh  smoke_test.py  test_issue2_destination_path.py  test_issue4_font_corruption.py  upgrade-postgres.sh  verify_new_templates.py  verify_new_templates_real_batch.py
tests/: conftest.py  test_changelog.py  test_cleanup.py  test_cli.py  test_command_cleanup.py  test_command_db.py  test_command_release.py  test_command_setup.py  test_command_status.py  test_command_update.py  test_command_version.py  test_compose.py  test_config.py  test_conftest_smoke.py  test_context.py  test_copernico_mapping.py  test_coverage.py  test_db.py  test_db_cli.py  test_deploy_key.py  test_destination_path.py  test_doctor.py  test_exporter.py  test_extraction.py  test_font_corruption.py  test_git_ops.py  test_hashing.py  test_logging_setup.py  test_main.py  test_normalize.py  test_ocr.py  test_orchestrator.py  test_pdf_classify.py  test_releaser.py  test_repository.py  test_sap_hr_mapping.py  test_semver.py  test_setup_wizard.py  test_updater.py  test_validation.py  (+1 more)
(+15 files in other folders)
