[project]
name = "payroll-ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "ocrmypdf>=17.8.0",
    "pdfplumber>=0.11.10",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "typer>=0.26.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/payroll_ingest"]

[project.scripts]
payroll-ingest = "payroll_ingest.cli:app"

